--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Název</title>
+    <title>Klimeš Hosting</title>
   </head>
   <body>
 
   <header>
     <div id="logo">
-        <h1><span>Název</span></h1>
+        <h1><span>Klimeš</span></h1>
         <small>Hosting</small>
       </div>
   <!-- Menu -->
