--- a/index.html
+++ b/index.html
@@ -31,11 +31,24 @@
   <!-- Menu -->
   <div class="header">
 </div>
+  <article>
+  <div id="centrovac">
+    <header>
+      <h1>O nás</h1>
+    </header>
 
+    <section>
+      <p>
+
+      </p>
+    </section>
+</p>
+
+</div>
   <!-- Footer -->
 <footer>
   &copy;Klimeš 2021
 </footer>
   <!-- Footer -->
-  </body>
+</body>
 </html>
