--- a/onas.html
+++ b/onas.html
@@ -39,8 +39,77 @@
 
     <section>
       <p>
-
+        <div>
+          <div class="onas-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut placerat enim. Aliquam volutpat arcu a posuere molestie. Curabitur sed orci lacus. Etiam eu semper risus, sit amet gravida ipsum. Integer facilisis turpis a lobortis porta. Mauris vitae mi vel mi congue vulputate id sit amet purus. Pellentesque nisl nunc, laoreet vel aliquam sed, pretium vel felis. Nam finibus, arcu accumsan egestas vehicula, lacus arcu semper dolor, dignissim sodales dolor elit maximus tellus.
+          </div>
+        </div>
       </p>
+    </section>
+
+    <header>
+      <h1>Tým</h1>
+    </header>
+
+    <section>
+      <p>
+      <div class="container">
+        <div class="clen-tymu">
+          <div class="clen-tymu-fork">
+            <img src="">
+          </div>
+          <div class="clen-tymu-jmeno">
+            <h3>Matěj Klimeš</h3>
+          </div>
+          <div class="clen-tymu-text">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at molestie massa. Aliquam volutpat auctor eros sodales porttitor. Quisque non tempor diam. Vivamus ut turpis risus. Cras hendrerit ut arcu.
+            </p>
+          </div>
+        </div>
+        <div class="clen-tymu">
+          <div class="clen-tymu-fork">
+            <img src="">
+          </div>
+          <div class="clen-tymu-jmeno">
+            <h3>Marek Ruttner</h3>
+          </div>
+          <div class="clen-tymu-text">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at molestie massa. Aliquam volutpat auctor eros sodales porttitor. Quisque non tempor diam. Vivamus ut turpis risus. Cras hendrerit ut arcu.
+            </p>
+          </div>
+        </div>
+        <div class="clen-tymu">
+          <div class="clen-tymu-fork">
+            <img src="">
+          </div>
+          <div class="clen-tymu-jmeno">
+            <h3>Lenka Havlíčková</h3>
+          </div>
+          <div class="clen-tymu-text">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at molestie massa. Aliquam volutpat auctor eros sodales porttitor. Quisque non tempor diam. Vivamus ut turpis risus. Cras hendrerit ut arcu.
+            </p>
+          </div>
+        </div>
+      </p>
+      <p>
+        <div class="clen-tymu">
+          <div class="clen-tymu-fork">
+            <img src="">
+          </div>
+          <div class="clen-tymu-jmeno">
+            <h3>Dominik Burda</h3>
+          </div>
+          <div class="clen-tymu-text">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at molestie massa. Aliquam volutpat auctor eros sodales porttitor. Quisque non tempor diam. Vivamus ut turpis risus. Cras hendrerit ut arcu.
+            </p>
+          </div>
+        </div>
+      </p>
+      </div>
     </section>
 </p>
 
