--- a/onas.html
+++ b/onas.html
@@ -100,7 +100,7 @@
             <img src="">
           </div>
           <div class="clen-tymu-jmeno">
-            <h3>Dominik Burda</h3>
+            <h3>Dominik Budra</h3>
           </div>
           <div class="clen-tymu-text">
             <p>
