--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="novinky.html">Novinky</a></li>
             <li><a href="sluzby.html">Služby</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
-            <li><a class="kontakt-tlacitko" href="kontakt.html">Přihlásit se</a></li>
+            <li><a class="kontakt-tlacitko" href="login.html">Přihlásit se</a></li>
           </ul>
         </nav>
         </header>
