--- a/onas.html
+++ b/onas.html
@@ -48,70 +48,77 @@
     </section>
 
     <header>
-      <h1>Tým</h1>
+      <h1>Náš tým</h1>
       </div>
     </header>
 
+    <h2>Vedení týmu</h2>
     <section>
       <p>
       <div class="container">
         <div class="clen-tymu">
           <div class="clen-tymu-fork">
-            <img src="">
+            <img src="obrazky/klimes.png" class="profil">
           </div>
           <div class="clen-tymu-jmeno">
             <h3>Matěj Klimeš</h3>
           </div>
           <div class="clen-tymu-text">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at molestie massa. Aliquam volutpat auctor eros sodales porttitor. Quisque non tempor diam. Vivamus ut turpis risus. Cras hendrerit ut arcu.
+              Vedoucí Projektu
             </p>
           </div>
         </div>
         <div class="clen-tymu">
           <div class="clen-tymu-fork">
-            <img src="">
+            <img src="obrazky/ruttner.png" class="profil">
           </div>
           <div class="clen-tymu-jmeno">
             <h3>Marek Ruttner</h3>
           </div>
           <div class="clen-tymu-text">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at molestie massa. Aliquam volutpat auctor eros sodales porttitor. Quisque non tempor diam. Vivamus ut turpis risus. Cras hendrerit ut arcu.
+              Vedoucí odd. Developmentu
             </p>
           </div>
         </div>
         <div class="clen-tymu">
           <div class="clen-tymu-fork">
-            <img src="">
+            <img src="" class="profil">
           </div>
           <div class="clen-tymu-jmeno">
             <h3>Lenka Havlíčková</h3>
           </div>
           <div class="clen-tymu-text">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at molestie massa. Aliquam volutpat auctor eros sodales porttitor. Quisque non tempor diam. Vivamus ut turpis risus. Cras hendrerit ut arcu.
-            </p>
-          </div>
-        </div>
-      </p>
-      <p>
-        <div class="clen-tymu">
-          <div class="clen-tymu-fork">
-            <img src="">
-          </div>
-          <div class="clen-tymu-jmeno">
-            <h3>Dominik Budra</h3>
-          </div>
-          <div class="clen-tymu-text">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at molestie massa. Aliquam volutpat auctor eros sodales porttitor. Quisque non tempor diam. Vivamus ut turpis risus. Cras hendrerit ut arcu.
+              Vedoucí odd. Podpory
             </p>
           </div>
         </div>
       </p>
       </div>
     </section>
+</p>
+<h2>Development</h2>
+  <section>
+    <p>
+    <div class="container">
+      <div class="clen-tymu">
+        <div class="clen-tymu-fork">
+          <img src="" class="profil">
+        </div>
+        <div class="clen-tymu-jmeno">
+          <h3>Dominik Budra</h3>
+        </div>
+        <div class="clen-tymu-text">
+          <p>
+            Developer
+          </p>
+        </div>
+      </div>
+    </p>
+  </div>
+</section>
 </p>
   <!-- Footer -->
 <footer>
