--- a/novinky.html
+++ b/novinky.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Klimeš Hosting</title>
+    <title>MattGhost</title>
   </head>
   <body>
 
   <header>
     <div id="logo">
-        <h1><span>Klimeš</span></h1>
+        <h1><span>MattGhost</span></h1>
         <small>Hosting</small>
       </div>
   <!-- Menu -->
@@ -32,7 +32,7 @@
 
   <!-- Footer -->
 <footer>
-  &copy;Klimeš 2021
+  &copy;MattGhost 2021
 </footer>
   <!-- Footer -->
 </body>
