--- a/onas.html
+++ b/onas.html
@@ -108,7 +108,7 @@
           <img src="" class="profil">
         </div>
         <div class="clen-tymu-jmeno">
-          <h3>Dominik Budra</h3>
+          <h3>Dominik Badura</h3>
         </div>
         <div class="clen-tymu-text">
           <p>
