--- a/login.html
+++ b/login.html
@@ -11,6 +11,20 @@
   </head>
 
   <body class="login">
-    
+    <div class="login-container">
+      <div class="profile-pic">
+        <img src="">
+      </div>
+      <div class="login-text">
+        <p>MattGhost</p>
+      </div>
+      <div class="login-input">
+        <input type="text" class="login-usrname">
+        <input type="password" class="login-usrpassword">
+      </div>
+      <div class="login-btn">
+        <button>Login</button>
+      </div>
+    </div>
   </body>
 </html>
