--- a/login.html
+++ b/login.html
@@ -16,14 +16,16 @@
         <img src="">
       </div>
       <div class="login-text">
-        <p>MattGhost</p>
+        <p><b>MATTGHOST</b></p>
       </div>
       <div class="login-input">
+        <p class="login-title">Uživatelské jméno:</p>
         <input type="text" class="login-usrname">
+        <p class="login-title">Heslo: </p>
         <input type="password" class="login-usrpassword">
       </div>
-      <div class="login-btn">
-        <button>Login</button>
+      <div>
+        <button class="login-btn">Login</button>
       </div>
     </div>
   </body>
