--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
         <input type="password" class="login-usrpassword">
       </div>
       <div>
-        <button class="login-btn">Login</button>
+        <button class="login-btn"><ahref="admin/index.html">Login</a></button>
       </div>
     </div>
   </body>
