Dokončena stránka index.html v admin

--- a/admin/index.html
+++ b/admin/index.html
@@ -91,6 +91,21 @@
   </div>
   <section class="home-section">
       <div class="text">Panel</div>
+      <p class="welcome">Vítejte, pane Klimeši! Nemáte žádné nové oznámení.</p>
+      <h1 class="nadpis">Vaše služby</h1>
+      <div class="sluzby"><a href="sluzby.html">
+        <div class="sluzby-fork">
+          <i class='bx bxs-plus-circle'></i>
+        </div>
+        <div class="sluzby-nazev">
+          <h3>Nemáte nic objednaného!</h3>
+        </div>
+        <div class="sluzby-text">
+          <p>
+            Objednejte si novou službu.
+          </p>
+        </div>
+      </div></a>
   </section>
   <script>
   let sidebar = document.querySelector(".sidebar");
