--- a/admin/index.html
+++ b/admin/index.html
@@ -22,56 +22,56 @@
          <span class="tooltip">Vyhledat</span>
       </li>
       <li>
-        <a href="#">
+        <a href="index.html">
           <i class='bx bx-grid-alt'></i>
           <span class="links_name">Panel</span>
         </a>
          <span class="tooltip">Panel</span>
       </li>
       <li>
-       <a href="#">
+       <a href="sluzby.html">
          <i class='bx bx-server'></i>
          <span class="links_name">Služby</span>
        </a>
        <span class="tooltip">Služby</span>
      </li>
      <li>
-       <a href="#">
+       <a href="profil.html">
          <i class='bx bx-user-circle'></i>
          <span class="links_name">Profil</span>
        </a>
        <span class="tooltip">Profil</span>
      </li>
      <li>
-       <a href="#">
+       <a href="historie.html">
          <i class='bx bx-history' ></i>
          <span class="links_name">Historie</span>
        </a>
        <span class="tooltip">Historie</span>
      </li>
      <li>
-       <a href="#">
+       <a href="soubory.html">
          <i class='bx bx-folder' ></i>
          <span class="links_name">Soubory</span>
        </a>
        <span class="tooltip">Soubory</span>
      </li>
      <li>
-       <a href="#">
+       <a href="ftp.html">
          <i class='bx bx-group'></i>
          <span class="links_name">FTP</span>
        </a>
        <span class="tooltip">FTP</span>
      </li>
      <li>
-       <a href="#">
+       <a href="podpora.html">
          <i class='bx bx-support' ></i>
          <span class="links_name">Podpora</span>
        </a>
        <span class="tooltip">Podpora</span>
      </li>
      <li>
-       <a href="#">
+       <a href="zpravy.html">
          <i class='bx bxs-message-square-check'></i>
          <span class="links_name">Zprávy</span>
        </a>
