--- a/kontakt.html
+++ b/kontakt.html
@@ -2,7 +2,7 @@
 <html lang="cs" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="icon" href="demo_icon.gif" type="image/gif" sizes="16x16">
+    <link rel="icon" href="obrazky/ico.png" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
