Nový style loginu a přidaná tlačítka

--- a/login.html
+++ b/login.html
@@ -19,14 +19,18 @@
         <p><b>MATTGHOST</b></p>
       </div>
       <div class="login-input">
-        <p class="login-title">Uživatelské jméno:</p>
+        <p class="login-title">Uživatelské jméno</p>
         <input type="text" class="login-usrname">
-        <p class="login-title">Heslo: </p>
+        <p class="login-title">Heslo</p>
         <input type="password" class="login-usrpassword">
       </div>
       <div>
-        <a href="admin/index.html"><button class="login-btn">Login</button></a>
-      </div>
+        <br>
+        <a href="admin/index.html"><button type="button" class="btn btn-success">Přihlásit se</button></a>
+      </div><br>
+      <p>Zapomenuté heslo<br>
+      Registrovat se</p>
+      <p class="tlacitko-zpet"><a href="index.html">← Zpět</a></p>
     </div>
   </body>
 </html>
