--- a/admin/index.html
+++ b/admin/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="obrazky/ico.png" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="style.css">
     <title>MattGhost l Admin</title>
     <!-- Boxicons CDN Link -->
