--- a/admin/zpravy.html
+++ b/admin/zpravy.html
@@ -91,7 +91,7 @@
     </ul>
   </div>
   <section class="home-section">
-      <div class="text">Podpora</div>
+      <div class="text">Zprávy</div>
   </section>
   <script>
   let sidebar = document.querySelector(".sidebar");
