Základní rozhraní služeb

--- a/admin/sluzby.html
+++ b/admin/sluzby.html
@@ -92,6 +92,74 @@
   </div>
   <section class="home-section">
       <div class="text">Služby</div>
+      <h1 class="nadpis">Vaše služby</h1>
+      <div class="sluzby"><a href="sluzby.html">
+        <div class="sluzby-fork">
+          <i class='bx bxs-plus-circle'></i>
+        </div>
+        <div class="sluzby-nazev">
+          <h3>Nemáte nic objednaného!</h3>
+        </div>
+        <div class="sluzby-text">
+          <p>
+            Objednejte si novou službu.
+          </p>
+        </div>
+      </div></a>
+
+      <h1 class="nadpis">Objednejte si něco nového!</h1>
+      <div class="sluzby"><a href="sluzby.html">
+        <div class="sluzby-fork">
+          <i class='bx bx-headphone'></i>
+        </div>
+        <div class="sluzby-nazev">
+          <h3>TeamSpeak server</h3>
+        </div>
+        <div class="sluzby-text">
+          <p>
+            Již od 4Kč/slot.
+          </p>
+        </div>
+      </div></a>
+      <div class="sluzby"><a href="sluzby.html">
+        <div class="sluzby-fork">
+          <i class='bx bx-globe' ></i>
+        </div>
+        <div class="sluzby-nazev">
+          <h3>WebHosting</h3>
+        </div>
+        <div class="sluzby-text">
+          <p>
+            Připravujeme...
+          </p>
+        </div>
+      </div></a>
+      <div class="sluzby"><a href="sluzby.html">
+        <div class="sluzby-fork">
+          <i class='bx bxs-component'></i>
+        </div>
+        <div class="sluzby-nazev">
+          <h3>Minecraft server</h3>
+        </div>
+        <div class="sluzby-text">
+          <p>
+            Připravujeme...
+          </p>
+        </div>
+      </div></a>
+      <div class="sluzby"><a href="sluzby.html">
+        <div class="sluzby-fork">
+          <i class='bx bxs-traffic-barrier'></i>
+        </div>
+        <div class="sluzby-nazev">
+          <h3>Více připravujeme...</h3>
+        </div>
+        <div class="sluzby-text">
+          <p>
+            Již brzy. Máte se na co těšit.
+          </p>
+        </div>
+      </div></a>
   </section>
   <script>
   let sidebar = document.querySelector(".sidebar");
