Opravena chyba s profilovým obrázek

--- a/admin/historie.html
+++ b/admin/historie.html
@@ -80,7 +80,7 @@
      </li>
      <li class="profile">
          <div class="profile-details">
-           <img src="prof/klimes.png" alt="profileImg">
+           <<img src="obrazky/klimes.png" alt="profileImg">
            <div class="name_job">
              <div class="name">Klimeš Matěj</div>
              <div class="job">Vedoucí projektu</div>
